--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
     "graphql": "^15.5.0",
+    "nanoid": "^3.1.22",
     "pg": "^8.5.1",
-    "sequelize": "^6.6.2",
-    "shortid": "^2.2.16"
+    "sequelize": "^6.6.2"
   },
   "devDependencies": {
     "eslint": "^7.24.0",
@@ -37,6 +37,6 @@
     "eslint-plugin-prettier": "^3.3.1",
     "jest": "^26.6.3",
     "nodemon": "^2.0.7",
-    "prettier": "^2.2.1"
+    "prettier": "2.2.1"
   }
 }
