--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "graphql": "^15.5.0",
     "nanoid": "^3.1.22",
     "pg": "^8.5.1",
+    "pg-hstore": "^2.3.3",
     "sequelize": "^6.6.2"
   },
   "devDependencies": {
